--- a/src/main/resources/templates/member_add.html
+++ b/src/main/resources/templates/member_add.html
@@ -11,7 +11,7 @@
     用户姓名：<input type="text" name="name" value="高挺"/><br/>
     <!--用户工资：<input type="text" name="salary" value="92389239.23"/><br/>-->
     <!--用户生日：<input type="text" name="birthday" value="2010-10-10"/><br/>-->
-    <input type="submit" value="提交"/>
+    <input type="submit" value="提交/">
     <input type="reset" value="重置"/>
 </form>
 </body>
